--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,117 @@
-.app {
-    .page-content {
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
+.App {
+    .Page-content {
         padding-top: 100px;
         text-align: center;
+    }
+
+    .Booking-Dashboard---simple {
+        width: 1300px;
+        height: 400px;
+        background-color: var(--ffffff);
+      }
+
+    .Rooms-available {
+        display: inline-flex;
+        width: 114.6px;
+        height: 15px;
+        font-family: 'Lato', sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: var(--color-steel-grey);
+        margin-left: 130px;
+    }
+
+    .Reserved-rooms {
+        display: inline-flex;
+        width: 114.6px;
+        height: 15px;
+        font-family: 'Lato', sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: var(--color-steel-grey);
+        margin-left: 214px;
+    }
+
+    .Checked-in {
+        display: inline-flex;
+        width: 114.6px;
+        height: 15px;
+        font-family: 'Lato', sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: var(--color-steel-grey);
+        margin-left: 212px;
+    }
+
+    .Row {
+        display: inline-flex;
+        width: 56.6px;
+        height: 29px;
+        font-family: 'Lato', sans-serif;
+        font-size: 24px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: #ffffff;
+    }
+
+    .Line {
+        margin-left: 130px;
+        width: 1100px;
+        height: 1px;
+        border: solid 1px #374148;
+    }
+
+    .EmployeeStats {
+        width: 456px;
+        height: 21px;
+        font-family: 'Lato', sans-serif;
+        font-size: 17px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: #ffffff;
+        margin-top: 65px;
+    }
+
+    .Bitmap {
+        display: inline-flex;
+        margin-bottom: -10px;
+        width: 33px;
+        height: 33px;
+        object-fit: contain;
+        margin-left: 130px;
+        margin-top: 30px;
+    }
+
+    .Name {
+        display: inline-flex;
+        width: 120px;
+        font-family: 'Lato', sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.5;
+        letter-spacing: normal;
+        color: var(#ffffff);
     }
 }
